Fix table on small screens

--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,7 @@ html {
 
 .rented-movies {
     width: 600px;
+    max-width: 100%;
 }
 
 .brand_logo_container {
